--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.62.0",
     "react-player": "^3.3.2",
     "react-redux": "^9.2.0",
+    "recharts": "^3.1.2",
     "rehype-external-links": "^3.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
